sql-analyzer-plugin/scripts/postgreSql/antlr/PostgreSql/postgreSqlGrammarParser.py
# Generated from antlr/PostgreSql/postgreSqlGrammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class postgreSqlGrammarParser ( Parser ):

    grammarFileName = "postgreSqlGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'VARCHAR'", "'INT'", "'NUMERIC'", 
                     "'TEXT'", "'DATE'", "'TIMESTAMP'", "'BOOL'", "'SERIAL'", 
                     "'BIGSERIAL'", "'UUID'", "'JSON'", "'JSONB'", "'BYTEA'", 
                     "'FLOAT'", "'REAL'", "'DOUBLE'", "'DECIMAL'", "'MONEY'", 
                     "'SMALLINT'", "'BIGINT'", "'CHAR'", "'BIT'", "'INTERVAL'", 
                     "'AUTOINCREMENT'", "'SELECT'", "'WITH'", "'FROM'", 
                     "'WHERE'", "'GROUP'", "'BY'", "'HAVING'", "'ORDER'", 
                     "'ASC'", "'DESC'", "'AND'", "'OR'", "'NOT'", "'AS'", 
                     "'ON'", "'IS'", "'NULL'", "'LIKE'", "'BETWEEN'", "'NATURAL'", 
                     "'CASE'", "'WHEN'", "'THEN'", "'ELSE'", "'END'", "'CREATE'", 
                     "'FUNCTION'", "'RETURNS'", "'INNER'", "'LEFT'", "'RIGHT'", 
                     "'FULL'", "'JOIN'", "'COUNT'", "'SUM'", "'AVG'", "'MIN'", 
                     "'MAX'", "'ARRAY_AGG'", "'STRING_AGG'", "'BOOL_AND'", 
                     "'BOOL_OR'", "'VAR_POP'", "'VAR_SAMP'", "'STDDEV_POP'", 
                     "'STDDEV_SAMP'", "'OFFSET'", "'FETCH'", "'FIRST'", 
                     "'ROWS'", "'ONLY'", "'DISTINCT'", "'TABLE'", "'UNIQUE'", 
                     "'PRIMARY'", "'KEY'", "'DEFAULT'", "'FOREIGN'", "'REFERENCES'", 
                     "'INDEX'", "'DROP'", "'ALTER'", "'RENAME'", "'CONSTRAINT'", 
                     "'TO'", "'ADD'", "'COLUMN'", "'DATABASE'", "'IF'", 
                     "'EXISTS'", "<INVALID>", "<INVALID>", "'*'", "','", 
                     "';'", "'.'", "'('", "')'", "'='", "'!='", "'<'", "'<='", 
                     "'>'", "'>='", "'+'", "'-'", "'/'", "'INSERT'", "'INTO'", 
                     "'VALUES'", "'UPDATE'", "'SET'", "'DELETE'" ]

    symbolicNames = [ "<INVALID>", "ID", "VARCHAR", "INT", "NUMERIC", "TEXT", 
                      "DATE", "TIMESTAMP", "BOOL", "SERIAL", "BIGSERIAL", 
                      "UUID", "JSON", "JSONB", "BYTEA", "FLOAT", "REAL", 
                      "DOUBLE", "DECIMAL", "MONEY", "SMALLINT", "BIGINT", 
                      "CHAR", "BIT", "INTERVAL", "AUTOINCREMENT", "SELECT", 
                      "WITH", "FROM", "WHERE", "GROUP", "BY", "HAVING", 
                      "ORDER", "ASC", "DESC", "AND", "OR", "NOT", "AS", 
                      "ON", "IS", "NULL", "LIKE", "BETWEEN", "NATURAL", 
                      "CASE", "WHEN", "THEN", "ELSE", "END", "CREATE", "FUNCTION", 
                      "RETURNS", "INNER", "LEFT", "RIGHT", "FULL", "JOIN", 
                      "COUNT", "SUM", "AVG", "MIN", "MAX", "ARRAY_AGG", 
                      "STRING_AGG", "BOOL_AND", "BOOL_OR", "VAR_POP", "VAR_SAMP", 
                      "STDDEV_POP", "STDDEV_SAMP", "OFFSET", "FETCH", "FIRST", 
                      "ROWS", "ONLY", "DISTINCT", "TABLE", "UNIQUE", "PRIMARY", 
                      "KEY", "DEFAULT", "FOREIGN", "REFERENCES", "INDEX", 
                      "DROP", "ALTER", "RENAME", "CONSTRAINT", "TO", "ADD", 
                      "COLUMN", "DATABASE", "IF", "EXISTS", "STRING", "NUMBER", 
                      "STAR", "COMMA", "SEMI", "DOT", "LPAREN", "RPAREN", 
                      "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "PLUS", "MINUS", 
                      "SLASH", "INSERT", "INTO", "VALUES", "UPDATE", "SET", 
                      "DELETE", "LINE_COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_sql_stmt = 0
    RULE_select_stmt = 1
    RULE_function_stmt = 2
    RULE_data_type = 3
    RULE_function_params = 4
    RULE_func_body = 5
    RULE_create_table_stmt = 6
    RULE_column_def = 7
    RULE_column_constraint = 8
    RULE_table_constraint = 9
    RULE_column_list = 10
    RULE_create_index_stmt = 11
    RULE_create_database_stmt = 12
    RULE_drop_stmt = 13
    RULE_alter_table_stmt = 14
    RULE_alter_table_action = 15
    RULE_insert_stmt = 16
    RULE_insert_values = 17
    RULE_update_stmt = 18
    RULE_update_assignment = 19
    RULE_delete_stmt = 20
    RULE_value = 21
    RULE_limit_offset_clause = 22
    RULE_with_clause = 23
    RULE_cte = 24
    RULE_result_column = 25
    RULE_join_clause = 26
    RULE_standard_join = 27
    RULE_natural_join = 28
    RULE_join_type = 29
    RULE_natural_join_type = 30
    RULE_table_reference = 31
    RULE_table_name = 32
    RULE_alias = 33
    RULE_group_by_clause = 34
    RULE_group_by_item = 35
    RULE_order_by_clause = 36
    RULE_order_by_item = 37
    RULE_agg_func = 38
    RULE_expr = 39
    RULE_arith_expr = 40
    RULE_atom = 41
    RULE_case_expr = 42
    RULE_when_clause = 43
    RULE_function_call = 44
    RULE_function_arg = 45

    ruleNames =  [ "sql_stmt", "select_stmt", "function_stmt", "data_type", 
                   "function_params", "func_body", "create_table_stmt", 
                   "column_def", "column_constraint", "table_constraint", 
                   "column_list", "create_index_stmt", "create_database_stmt", 
                   "drop_stmt", "alter_table_stmt", "alter_table_action", 
                   "insert_stmt", "insert_values", "update_stmt", "update_assignment", 
                   "delete_stmt", "value", "limit_offset_clause", "with_clause", 
                   "cte", "result_column", "join_clause", "standard_join", 
                   "natural_join", "join_type", "natural_join_type", "table_reference", 
                   "table_name", "alias", "group_by_clause", "group_by_item", 
                   "order_by_clause", "order_by_item", "agg_func", "expr", 
                   "arith_expr", "atom", "case_expr", "when_clause", "function_call", 
                   "function_arg" ]

    EOF = Token.EOF
    ID=1
    VARCHAR=2
    INT=3
    NUMERIC=4
    TEXT=5
    DATE=6
    TIMESTAMP=7
    BOOL=8
    SERIAL=9
    BIGSERIAL=10
    UUID=11
    JSON=12
    JSONB=13
    BYTEA=14
    FLOAT=15
    REAL=16
    DOUBLE=17
    DECIMAL=18
    MONEY=19
    SMALLINT=20
    BIGINT=21
    CHAR=22
    BIT=23
    INTERVAL=24
    AUTOINCREMENT=25
    SELECT=26
    WITH=27
    FROM=28
    WHERE=29
    GROUP=30
    BY=31
    HAVING=32
    ORDER=33
    ASC=34
    DESC=35
    AND=36
    OR=37
    NOT=38
    AS=39
    ON=40
    IS=41
    NULL=42
    LIKE=43
    BETWEEN=44
    NATURAL=45
    CASE=46
    WHEN=47
    THEN=48
    ELSE=49
    END=50
    CREATE=51
    FUNCTION=52
    RETURNS=53
    INNER=54
    LEFT=55
    RIGHT=56
    FULL=57
    JOIN=58
    COUNT=59
    SUM=60
    AVG=61
    MIN=62
    MAX=63
    ARRAY_AGG=64
    STRING_AGG=65
    BOOL_AND=66
    BOOL_OR=67
    VAR_POP=68
    VAR_SAMP=69
    STDDEV_POP=70
    STDDEV_SAMP=71
    OFFSET=72
    FETCH=73
    FIRST=74
    ROWS=75
    ONLY=76
    DISTINCT=77
    TABLE=78
    UNIQUE=79
    PRIMARY=80
    KEY=81
    DEFAULT=82
    FOREIGN=83
    REFERENCES=84
    INDEX=85
    DROP=86
    ALTER=87
    RENAME=88
    CONSTRAINT=89
    TO=90
    ADD=91
    COLUMN=92
    DATABASE=93
    IF=94
    EXISTS=95
    STRING=96
    NUMBER=97
    STAR=98
    COMMA=99
    SEMI=100
    DOT=101
    LPAREN=102
    RPAREN=103
    EQ=104
    NEQ=105
    LT=106
    LTE=107
    GT=108
    GTE=109
    PLUS=110
    MINUS=111
    SLASH=112
    INSERT=113
    INTO=114
    VALUES=115
    UPDATE=116
    SET=117
    DELETE=118
    LINE_COMMENT=119
    BLOCK_COMMENT=120
    WS=121

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Sql_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select_stmt(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Select_stmtContext,0)


        def SEMI(self):
            return self.getToken(postgreSqlGrammarParser.SEMI, 0)

        def function_stmt(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Function_stmtContext,0)


        def create_table_stmt(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Create_table_stmtContext,0)


        def create_index_stmt(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Create_index_stmtContext,0)


        def create_database_stmt(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Create_database_stmtContext,0)


        def drop_stmt(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Drop_stmtContext,0)


        def alter_table_stmt(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Alter_table_stmtContext,0)


        def insert_stmt(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Insert_stmtContext,0)


        def update_stmt(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Update_stmtContext,0)


        def delete_stmt(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Delete_stmtContext,0)


        def getRuleIndex(self):
            return postgreSqlGrammarParser.RULE_sql_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSql_stmt" ):
                listener.enterSql_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSql_stmt" ):
                listener.exitSql_stmt(self)




    def sql_stmt(self):

        localctx = postgreSqlGrammarParser.Sql_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sql_stmt)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.select_stmt()
                self.state = 93
                self.match(postgreSqlGrammarParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.function_stmt()
                self.state = 96
                self.match(postgreSqlGrammarParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.create_table_stmt()
                self.state = 99
                self.match(postgreSqlGrammarParser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.create_index_stmt()
                self.state = 102
                self.match(postgreSqlGrammarParser.SEMI)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 104
                self.create_database_stmt()
                self.state = 105
                self.match(postgreSqlGrammarParser.SEMI)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.drop_stmt()
                self.state = 108
                self.match(postgreSqlGrammarParser.SEMI)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 110
                self.alter_table_stmt()
                self.state = 111
                self.match(postgreSqlGrammarParser.SEMI)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 113
                self.insert_stmt()
                self.state = 114
                self.match(postgreSqlGrammarParser.SEMI)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 116
                self.update_stmt()
                self.state = 117
                self.match(postgreSqlGrammarParser.SEMI)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 119
                self.delete_stmt()
                self.state = 120
                self.match(postgreSqlGrammarParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(postgreSqlGrammarParser.SELECT, 0)

        def FROM(self):
            return self.getToken(postgreSqlGrammarParser.FROM, 0)

        def table_reference(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Table_referenceContext,0)


        def STAR(self):
            return self.getToken(postgreSqlGrammarParser.STAR, 0)

        def WITH(self):
            return self.getToken(postgreSqlGrammarParser.WITH, 0)

        def with_clause(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.With_clauseContext,0)


        def DISTINCT(self):
            return self.getToken(postgreSqlGrammarParser.DISTINCT, 0)

        def join_clause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(postgreSqlGrammarParser.Join_clauseContext)
            else:
                return self.getTypedRuleContext(postgreSqlGrammarParser.Join_clauseContext,i)


        def WHERE(self):
            return self.getToken(postgreSqlGrammarParser.WHERE, 0)

        def expr(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.ExprContext,0)


        def group_by_clause(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Group_by_clauseContext,0)


        def order_by_clause(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Order_by_clauseContext,0)


        def result_column(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(postgreSqlGrammarParser.Result_columnContext)
            else:
                return self.getTypedRuleContext(postgreSqlGrammarParser.Result_columnContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(postgreSqlGrammarParser.COMMA)
            else:
                return self.getToken(postgreSqlGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return postgreSqlGrammarParser.RULE_select_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_stmt" ):
                listener.enterSelect_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_stmt" ):
                listener.exitSelect_stmt(self)




    def select_stmt(self):

        localctx = postgreSqlGrammarParser.Select_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_select_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 124
                self.match(postgreSqlGrammarParser.WITH)
                self.state = 125
                self.with_clause()


            self.state = 128
            self.match(postgreSqlGrammarParser.SELECT)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==77:
                self.state = 129
                self.match(postgreSqlGrammarParser.DISTINCT)


            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 132
                self.match(postgreSqlGrammarParser.STAR)
                pass

            elif la_ == 2:
                self.state = 133
                self.result_column()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==99:
                    self.state = 134
                    self.match(postgreSqlGrammarParser.COMMA)
                    self.state = 135
                    self.result_column()
                    self.state = 140
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


            self.state = 143
            self.match(postgreSqlGrammarParser.FROM)
            self.state = 144
            self.table_reference()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 558481538166030336) != 0):
                self.state = 145
                self.join_clause()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 151
                self.match(postgreSqlGrammarParser.WHERE)
                self.state = 152
                self.expr(0)


            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 155
                self.group_by_clause()


            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 158
                self.order_by_clause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(postgreSqlGrammarParser.CREATE, 0)

        def FUNCTION(self):
            return self.getToken(postgreSqlGrammarParser.FUNCTION, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(postgreSqlGrammarParser.ID)
            else:
                return self.getToken(postgreSqlGrammarParser.ID, i)

        def LPAREN(self):
            return self.getToken(postgreSqlGrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(postgreSqlGrammarParser.RPAREN, 0)

        def RETURNS(self):
            return self.getToken(postgreSqlGrammarParser.RETURNS, 0)

        def AS(self):
            return self.getToken(postgreSqlGrammarParser.AS, 0)

        def func_body(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Func_bodyContext,0)


        def function_params(self):
            return self.getTypedRuleContext(postgreSqlGrammarParser.Function_paramsContext,0)


        def getRuleIndex(self):
            return postgreSqlGrammarParser.RULE_function_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_stmt" ):
                listener.enterFunction_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_stmt" ):
                listener.exitFunction_stmt(self)




    def function_stmt(self):

        localctx = postgreSqlGrammarParser.Function_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(postgreSqlGrammarParser.CREATE)
            self.state = 162
            self.match(postgreSqlGrammarParser.FUNCTION)
            self.state = 163
            self.match(postgreSqlGrammarParser.ID)
            self.state = 164
            self.match(postgreSqlGrammarParser.LPAREN)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 165
                self.function_params()


            self.state = 168
            self.match(postgreSqlGrammarParser.RPAREN)
            self.state = 169
            self.match(postgreSqlGrammarParser.RETURNS)
            self.state = 170
            self.match(postgreSqlGrammarParser.ID)
            self.state = 171
            self.match(postgreSqlGrammarParser.AS)
            self.state = 172
            self.func_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARCHAR(self):
            return self.getToken(postgreSqlGrammarParser.VARCHAR, 0)

        def LPAREN(self):
            return self.getToken(postgreSqlGrammarParser.LPAREN, 0)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(postgreSqlGrammarParser.NUMBER)
            else:
                return self.getToken(postgreSqlGrammarParser.NUMBER, i)

        def RPAREN(self):
            return self.getToken(postgreSqlGrammarParser.RPAREN, 0)

        def INT(self):
            return self.getToken(postgreSqlGrammarParser.INT, 0)

        def NUMERIC(self):
            return self.getToken(postgreSqlGrammarParser.NUMERIC, 0)

        def COMMA(self):
            return self.getToken(postgreSqlGrammarParser.COMMA, 0)

        def TEXT(self):
            return self.getToken(postgreSqlGrammarParser.TEXT, 0)

        def DATE(self):
            return self.getToken(postgreSqlGrammarParser.DATE, 0)

        def TIMESTAMP(self):
            return self.getToken(postgreSqlGrammarParser.TIMESTAMP, 0)

        def BOOL(self):
            return self.getToken(postgreSqlGrammarParser.BOOL, 0)

        def SERIAL(self):
            return self.getToken(postgreSqlGrammarParser.SERIAL, 0)

        def BIGSERIAL(self):
            return self.getToken(postgreSqlGrammarParser.BIGSERIAL, 0)
